# freenet-delegates

./: Cargo.toml  README.md
upgrade-assistant/: Cargo.toml  README.md
upgrade-assistant/src/: lib.rs  previous_versions.rs
upgrade-assistant/wasm/: upgrade_assistant.wasm
