[workspace]
members = ["upgrade-assistant"]
resolver = "2"

[workspace.dependencies]
# Serialization
ciborium = "0.2.2"
serde = { version = "1.0", features = ["derive"] }

# Utilities
bs58 = "0.5.1"
tracing = "0.1.40"

# Freenet dependencies
freenet-stdlib = { version = "0.1.30", features = ["contract"] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
